fix: history page overflow

--- a/pages/dashboard/history/_components/ChartSection/ChartSection.module.css
+++ b/pages/dashboard/history/_components/ChartSection/ChartSection.module.css
@@ -8,6 +8,9 @@
   width: 100%;
   display: flex;
   flex-direction: column;
+  overflow: hidden;
+}
+.grid-container {
 }
 
 .header {
@@ -44,26 +47,20 @@
 }
 .btn_group {
   display: flex;
-  justify-content: center;
-  align-items: center;
 }
 
 .chart_container {
-  display: flex;
-  overflow: hidden;
   height: 500px;
+  display: flex;
+  width: 99%;
 }
 .barchart_container {
-  display: flex;
-  flex-basis: 100%;
-  overflow: hidden;
   height: 500px;
+  width: 99%;
 }
 .linechart_container {
-  display: flex;
-  flex-basis: 100%;
-  overflow: hidden;
   height: 500px;
+  width: 99%;
 }
 
 @media (max-width: 940px) {
